[package]
name = "serp-ocw"
version = "0.2.1"
authors = ["Muhammad-Jibril BA"]
edition = "2018"
license = "Unlicense"
description = "FRAME based example pallet for offchain worker"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false }
frame-support = { default-features = false, version = '2.0.1' }
frame-system = { default-features = false, version = '2.0.1' }
serde = { version = "1.0.101", optional = true }
sp-core = { version = "2.0.0", default-features = false }
sp-io = { version = "2.0.0", default-features = false }
sp-runtime = { default-features = false, version = '2.0.0' }
sp-std = { default-features = false, optional = true, version = '2.0.0' }
lite-json = { version = "0.1", default-features = false }
serp-ocw = { version = "0.1", default-features = false }
[features]
default = ["std"]
std = [
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"serde",
	"lite-json/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
]
